src/Components/Estimation/estimationStyle.scss
@mixin flex-column-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@mixin container {
  width: 1120px;
  padding: 30px 50px 12px;
  background-color: #f2f5f7;
}

@mixin smallFont {
  font-size: 16px;
  line-height: 24px;
}

.estimation {
  @include flex-column-center;
}

.estimation__header {
  font-size: 48px;
  line-height: 1.16;
  text-align: center;
  font-weight: 600;
}

.estimation__subheader {
  font-size: 18px;
  line-height: 24px;
  text-align: center;
  font-weight: 400;
  max-width: 600px;
}

.characters {
  width: calc(100% - 30px);
}

.from__list--shown,
.to__list--shown {
  display: initial;
  position: absolute;
  padding: 8px;
  max-height: 266px;
  width: calc(100% - 15px);
  border-radius: 2px;
  overflow-y: auto;
  box-shadow: 0px 2px 12px #abb3bd, 0 4px 8px rgba(0, 0, 0, 0.16);
  background-color: white;
  margin-top: 8px;
}

.from__list--hidden,
.to__list--hidden {
  display: none;
  position: absolute;
}

.from,
.to {
  position: relative;
}

.from__list__element,
.to__list__element {
  display: flex;
  cursor: pointer;
  align-items: center;
  justify-content: space-between;
  padding: 3px 8px 5px;
  margin-bottom: 1px;
  font-size: 14px;
  color: #000;
  line-height: 24px;
  border-radius: 2px;
  background-color: transparent;

  &--active,
  &-active {
    @extend .to__list__element;
    color: white;
    background-color: #002b5c;
  }
}

.from__language,
.to__language {
  width: 480px;
  display: flex;
  cursor: pointer;
  justify-content: space-between;
  padding: 11px 16px 13px;
  @include smallFont;
  border-radius: 2px;
  border-width: 0;
  transition: box-shadow 0.15s ease-in-out;
  box-shadow: 0px 2px 12px #abb3bd, 0 1px 2px rgba(0, 0, 0, 0.16);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: white;

  &--active,
  &--active {
    @extend .from__language;
    box-shadow: 0 0 0 2px #0055b8, 0 1px 2px rgba(0, 0, 0, 0.16);
  }
}

.estimation-main {
  @include container;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.characters__textarea {
  width: 280px;
  outline: none;
  display: flex;
  justify-content: space-between;
  @include smallFont;
  border-radius: 2px;
  border-width: 0;
  transition: box-shadow 0.15s ease-in-out;
  box-shadow: 0px 2px 12px #abb3bd, 0 1px 2px rgba(0, 0, 0, 0.16);
  padding: 11px 16px 13px;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: white;
  width: 100%;
  height: 24px;
  resize: none;
}

.measure-width {
  //visibility: hidden;
  width: calc(100% + 600px);
  white-space: nowrap;
}

.estimation__button {
  margin: 24px auto;
  padding: 11px 16px 13px;
  border: none;
  font: inherit;
  color: inherit;
  background: none;
  background-color: #0055b8;
  border-radius: 2px;
  color: #fff;
  font-weight: 500;
  @include smallFont;
  box-shadow: 0px 2px 12px #0055b8;
  transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.estimation__button:hover,
.solution__order--active:hover {
  background-color: #1c65b9;
  transition: background-color 0.5s;
}

.solutions {
  @include container;
  @include flex-column-center;
}

.solutions__mail-input {
  border-radius: 4px;
  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.16);
  border: none;
  padding: 8px;
  width: 300px;
  text-align: center;

  &--invalid {
    @extend .solutions__mail-input;
    border: 1px solid red;
  }
}

.solutions__list {
  padding: 8px 50px 12px;
  display: flex;
  width: 100%;
}

.solution {
  @include flex-column-center;
  padding: 48px 16px 24px;
  background-color: #fff;
  width: calc(100% / 3);
  margin-top: 24px;
  border-radius: 2px;
  box-shadow: 0px 2px 12px #abb3bd;
  overflow: hidden;
}

.solution__icons {
  @include flex-column-center;
}

.solution__icons__icon {
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: 20px;
  margin-left: 4px;
  font-size: 16px;
  font-weight: 400;
  margin-bottom: 8px;
}

.solution__order {
  pointer-events: none;
  margin: 0;
  padding: 11px 16px 13px;
  border: none;
  font: inherit;
  color: inherit;
  background: none;
  background-color: gray;
  border-radius: 2px;
  color: #fff;

  font-weight: 500;
  @include smallFont;
  box-shadow: 0px 2px 12px gray;
  transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  &--active {
    @extend .solution__order;
    cursor: pointer;
    pointer-events: auto;
    background-color: #0055b8;
    box-shadow: 0px 2px 12px #0055b8;
  }

}

.solution__header {
  line-height: 24px;
  margin-bottom: 16px;
  font-size: 22px;
}

.solutions__mail-description {
  margin-bottom: 8px;
}

.solution__price {
  font-size: 24px;
  line-height: 1.3;
  font-weight: 500;
  margin: 40px 0;
  cursor: pointer;
}

@media (max-width: 1200px) {
  .from__list--shown {
    z-index: 20;
  }

  .to__language {
    z-index: 5;
  }

  .estimation-main,
  .solutions {
    width: 940px;
    padding: 30px 24px 12px;
  }

  .from__language,
  .from__language--active,
  .to__language--active,
  .to__language {
    width: 400px;
  }
}

@media (max-width: 1000px) {
  .solutions__list {
    align-items: center;
    flex-direction: column;
    width: calc(100% - 100px);
  }

  .solutions {
    width: 100%;
  }

  .solution {
    width: 100%;
    max-width: 500px;
    padding: 8px 12px 24px;
  }

  .estimation-main {
    width: calc(100% - 48px);
  }

  .from,
  .to {
    position: relative;
    width: 100%;
  }

  .from__language,
  .from__language--active,
  .to__language--active,
  .from__language--active,
  .to__language--active,
  .from__language--active,
  .to__language--active,
  .to__language {
    width: calc(100% - 32px);
  }

  .estimation__header {
    font-size: 32px;
  }

  .estimation__subheader {
    font-size: 16px;
    line-height: 1.3;

  }
}

